tests/ui/reborrow/coerce-shared-associated-type-field.stderr
error: implementing `CoerceShared` currently requires source and target to have at most one non-ZST reborrow data field
  --> $DIR/coerce-shared-associated-type-field.rs:27:1
   |
LL | impl<'a> CoerceShared<MyRef<'a>> for MyMut<'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^---------^^^^^^---------^^^
   | |                     |              |
   | |                     |              source type has 2 non-ZST reborrow data fields
   | |                     target type has 2 non-ZST reborrow data fields
   | in this `CoerceShared` implementation
   |
   = note: this is a temporary restriction until `CoerceShared` lowering supports non-trivially memcpy-compatible field layouts

error: aborting due to 1 previous error

